@@ -26,7 +26,7 @@
 #include "ovms_log.h"
 static const char *TAG = "v-twizy";
 
-#define VERSION "1.3.0"
+#define VERSION "1.4.0"
 
 #include <stdio.h>
 #include <string>
@@ -80,6 +80,7 @@ OvmsVehicleRenaultTwizy* OvmsVehicleRenaultTwizy::GetInstance(OvmsWriter* writer
 size_t OvmsVehicleRenaultTwizy::m_modifier = 0;
 
 OvmsVehicleRenaultTwizy::OvmsVehicleRenaultTwizy()
+  : twizy_obd_rxwait(1,1)
 {
   ESP_LOGI(TAG, "Renault Twizy vehicle module");
 
